unpackaged/main/default/objects/bt_stripe__Connected_Account_Owner__c/bt_stripe__Connected_Account_Owner__c.object-meta.xml
<CustomObject>
    <description>Used by Stripe Connect. The record stores information about the Connected Account Owner (Person) in Stripe.</description>
    <label>Connected Account Owner</label>
    <nameField>
        <displayFormat>CC-{000000}</displayFormat>
        <label>Connected Account Owner Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Connected Account Owners</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>