unpackaged/main/default/objects/bt_stripe__Connected_Account_Owner__c/fields/bt_stripe__Account__c.field-meta.xml
<CustomField>
    <fullName>bt_stripe__Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>Connected_Account_Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>