unpackaged/main/default/objects/bt_stripe__Connected_Account_Owner__c/fields/bt_stripe__BirthDate__c.field-meta.xml
<CustomField>
    <fullName>bt_stripe__BirthDate__c</fullName>
    <description>The  Birthdate of the Owner. Set automatically if the Person Account or Contact  lookup is set and the record saved.</description>
    <inlineHelpText>The  Birthdate of the Owner. Set automatically if the Person Account lookup or Contact is set and the record saved.</inlineHelpText>
    <label>Birthdate</label>
    <type>Date</type>
</CustomField>