unpackaged/main/default/objects/bt_stripe__Connected_Account_Owner__c/fields/bt_stripe__City__c.field-meta.xml
<CustomField>
    <fullName>bt_stripe__City__c</fullName>
    <description>The  City of the Owner . Set automatically if the Person Account or Contact lookup is set and the record saved.</description>
    <inlineHelpText>The  City of the Owner . Set automatically if the Person Account or Contact lookup is set and the record saved.</inlineHelpText>
    <label>City</label>
    <length>255</length>
    <type>Text</type>
</CustomField>