unpackaged/main/default/objects/bt_stripe__Connected_Account_Owner__c/fields/bt_stripe__Connected_Account__c.field-meta.xml
<CustomField>
    <fullName>bt_stripe__Connected_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Connected Account</label>
    <referenceTo>bt_stripe__Connected_Account__c</referenceTo>
    <relationshipName>Connected_Account_Owner</relationshipName>
    <type>Lookup</type>
</CustomField>