unpackaged/main/default/objects/bt_stripe__Connected_Account_Owner__c/fields/bt_stripe__Contact__c.field-meta.xml
<CustomField>
    <fullName>bt_stripe__Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipName>Connected_Account_Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>