unpackaged/main/default/objects/bt_stripe__Connected_Account_Owner__c/fields/bt_stripe__Email__c.field-meta.xml
<CustomField>
    <fullName>bt_stripe__Email__c</fullName>
    <externalId>true</externalId>
    <inlineHelpText>The email address related to this Person Account or Contact.</inlineHelpText>
    <label>Email</label>
    <length>255</length>
    <type>Text</type>
</CustomField>