unpackaged/main/default/objects/bt_stripe__Connected_Account_Owner__c/fields/bt_stripe__First_Name__c.field-meta.xml
<CustomField>
    <fullName>bt_stripe__First_Name__c</fullName>
    <description>The  first name of the Owner. Set automatically if the Person Account or Contact  lookup is set and the record saved.</description>
    <externalId>true</externalId>
    <inlineHelpText>The  first name of the Owner. Set automatically if the Person Account lookup or Contact is set and the record saved.</inlineHelpText>
    <label>First Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>