unpackaged/main/default/objects/bt_stripe__Connected_Account_Owner__c/fields/bt_stripe__Gender__c.field-meta.xml
<CustomField>
    <fullName>bt_stripe__Gender__c</fullName>
    <label>Gender</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Female</fullName>
            </value>
            <value>
                <fullName>Male</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>