unpackaged/main/default/objects/bt_stripe__Connected_Account_Owner__c/fields/bt_stripe__Maiden_Name__c.field-meta.xml
<CustomField>
    <fullName>bt_stripe__Maiden_Name__c</fullName>
    <label>Maiden Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>