unpackaged/main/default/objects/bt_stripe__Connected_Account_Owner__c/fields/bt_stripe__Percent_Ownership__c.field-meta.xml
<CustomField>
    <fullName>bt_stripe__Percent_Ownership__c</fullName>
    <description>The percent owned by the person of the account&#39;s Company Info.</description>
    <inlineHelpText>The percent owned by the person of the account&#39;s Company Info.</inlineHelpText>
    <label>Percent Ownership</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>