unpackaged/main/default/objects/bt_stripe__Connected_Account_Owner__c/fields/bt_stripe__Personal_ID_Number_Encrypted__c.field-meta.xml
<CustomField>
    <fullName>bt_stripe__Personal_ID_Number_Encrypted__c</fullName>
    <description>The government-issued ID number of the account representative, as appropriate for the representative&#39;s country (e.g., a Social Security Number in the U.S. or a Social Insurance Number in Canada)</description>
    <inlineHelpText>The government-issued ID number of the account representative, as appropriate for the representative&#39;s country (e.g., a Social Security Number in the U.S. or a Social Insurance Number in Canada)</inlineHelpText>
    <label>Personal ID Number</label>
    <length>175</length>
    <maskChar>asterisk</maskChar>
    <maskType>all</maskType>
    <type>EncryptedText</type>
</CustomField>