unpackaged/main/default/objects/bt_stripe__Connected_Account_Owner__c/fields/bt_stripe__Relationship__c.field-meta.xml
<CustomField>
    <fullName>bt_stripe__Relationship__c</fullName>
    <description>Describes the person&#39;s relationship to the account.</description>
    <inlineHelpText>Describes the person&#39;s relationship to the account.</inlineHelpText>
    <label>Relationship</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Director</fullName>
            </value>
            <value>
                <fullName>Executive</fullName>
            </value>
            <value>
                <fullName>Representative</fullName>
            </value>
            <value>
                <fullName>Owner</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>