unpackaged/main/default/objects/bt_stripe__Connected_Account_Owner__c/fields/bt_stripe__Street2__c.field-meta.xml
<CustomField>
    <fullName>bt_stripe__Street2__c</fullName>
    <description>The  street of the Owner. Set automatically if the Person Account or Contact lookup is set and the record saved.</description>
    <inlineHelpText>The  street of the Owner. Set automatically if the Person Account or Contact lookup is set and the record saved.</inlineHelpText>
    <label>Street 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>