unpackaged/main/default/objects/bt_stripe__Connected_Account_Owner__c/fields/bt_stripe__Title__c.field-meta.xml
<CustomField>
    <fullName>bt_stripe__Title__c</fullName>
    <description>The person&#39;s title (e.g., CEO, Support Engineer).</description>
    <inlineHelpText>The person&#39;s title (e.g., CEO, Support Engineer).</inlineHelpText>
    <label>Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>