unpackaged/main/default/objects/bt_stripe__Connected_Account_Owner__c/fields/bt_stripe__Verification_Details__c.field-meta.xml
<CustomField>
    <fullName>bt_stripe__Verification_Details__c</fullName>
    <label>Verification Details</label>
    <length>255</length>
    <type>Text</type>
</CustomField>