unpackaged/main/default/objects/bt_stripe__Connected_Account_Owner__c/fields/bt_stripe__Verification_Document_ID_Back__c.field-meta.xml
<CustomField>
    <fullName>bt_stripe__Verification_Document_ID_Back__c</fullName>
    <description>(ID of a file upload) A photo (jpg or png) of the back side of an identifying document, either a passport or local ID card.</description>
    <inlineHelpText>(ID of a file upload) A photo (jpg or png) of the back side of an identifying document, either a passport or local ID card.</inlineHelpText>
    <label>Verification Document ID (Back-side)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>